--- a/firebase.json
+++ b/firebase.json
@@ -9,5 +9,16 @@
       "firebase-debug.*.log",
       "functions"
     ]
+  },
+  "emulators": {
+    "firestore": {
+      "port": 8080
+    },
+    "functions": {
+      "port": 5001
+    },
+    "ui": {
+      "enabled": true
+    }
   }
 }
