--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "NODE_ENV=production next build",
     "start": "next start",
     "lint": "next lint",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "test": "echo \"Error: no test specified\" && exit 0"
   },
   "dependencies": {
     "@genkit-ai/google-genai": "^1.20.0",
