--- a/src/ai/package.json
+++ b/src/ai/package.json
@@ -5,6 +5,9 @@
   "engines": {
     "node": "20"
   },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 0"
+  },
   "dependencies": {
     "firebase-admin": "^12.0.0",
     "firebase-functions": "^5.0.0"
